2015-08-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c, fwrite.c: Accept long file name for a log file and
	a index file.

2015-08-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c: Add '--help' option.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-01-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c, mendex.1, mendex.doc: Add '--' option.
	Update manuals.

2015-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fwrite.c: Some compilers mishandle the use of sizeof(buf)
	inside C99 variadic macros, so we replace it by BUFFERLEN.

2014-07-05  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* convert.c: Better timing for xstrdup.

2014-06-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* main.c: Drop definition of TL_VERSION.
	* configure.ac: Use ../../version.ac to AC_DEFINE([TL_VERSION]).

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.
	* configure.ac: Check for C99 variadic macros.
	* fwrite.c: Better handling of snprintf().

2014-05-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fread.c (copy_multibyte_char): Avoid ambiguous operation.

2014-05-13  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* fread.c: Add copy_multibyte_char() to
	copy multibyte character correctly.
	* tests/uni.{idx,ind}: Update.

2014-05-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* fread.c: Wide char is not always even bytes in getestr().

2014-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert.c: Add (unsigned char*) cast arg1 of UTF8StoUCS().
	* fwrite.c: Declare fprint_euc_char() as static.

2014-05-11  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* main.c: Add TeX Live version.
	* {main,convert,fread,fwrite,styfile}.c, kana.h,
	mendex.doc, mendex.1: Add a new option -I to switch
	internal buffers for key words to EUC-JP or UTF-8.
	* tests/mendex.test: Add a new test.
	* tests/uni.{idx,dict,ist} (new): Test input.
	* tests/uni.ind (new): Expected output.