@@ -245,15 +245,6 @@ void indwrite(char *filename, struct index *ind, int pagenum)
 						fputs(lethead_suffix,fp);
 					}
 				}
-
-				else if ((strncmp(ind[i].dic[0],HIRAEND,2)>=0)&&(strncmp(ind[i-1].dic[0],ind[i].dic[0],2)!=0)) {
-					fputs(group_skip,fp);
-					if (lethead_flag!=0) {
-						fputs(lethead_prefix,fp);
-						fprint_euc_char(fp,ind[i].dic[0][0],ind[i].dic[0][1]);
-						fputs(lethead_suffix,fp);
-					}
-				}
 			}
 
 			switch (ind[i].words) {
